feat(core): structured paragraphs, headings & page breaks in to-text docx export
DOCX output is now built directly as an OOXML package in memory (new
DocxWriter + StructuredTextStripper) instead of dumping raw extracted
text through a LibreOffice txt->docx conversion. The Word file now
carries real structure: wrapped lines re-joined into paragraphs split on
vertical layout gaps, larger-font lines promoted to bold Heading 1/2
paragraphs (Word outline styles), and page breaks between source pages.
This also removes the LibreOffice runtime requirement for DOCX output
(now produced natively, no external process, honouring the page range).